--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <!-- header -->
-  <nav class="navbar navbar-expand-lg mynav fondoHeader fixed-top">
+  <nav class="navbar navbar-expand-lg mynav fondoHeader">
     <div class="container-fluid fondoHeader">
       <div>
         <img class="logo" src="./img/logo.png" alt="">
