Se incorpora el SEO y se incorpora la refrencia a cada imagen del carousel

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- SEO -->
-  <meta name="keywords" content="consultoría, contratista, tecnología, capacitación, minería">
-  <meta name="description" content="Empresa contratista y consultora en minería">
+  <meta name="keywords" content="academia, preuniversitario, escolar, sabatino, admisión">
+  <meta name="description" content="Preparación preuniversitaria para ingresar a la universidad">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="./css/bootstrap.css">
   <!-- Nuestro estilo CSS -->
@@ -78,7 +78,7 @@
           </li>         
 
           <li class="nav-item">
-            <a class="nav-link" href="./contactanos.html">CONTÁCTANOS</a>
+            <a class="nav-link" href="">CONTÁCTANOS</a>
           </li>
 
         </ul>
@@ -100,27 +100,27 @@
               <div class="carousel-caption">
                 <h2 class="txt-carousel-blanco">Ciclo preuniversitario</h2>
               </div>
-              <img src="./img/car1-pre-01.png" class="d-block w-100 img-fluid img-carousel" alt="...">
+              <a href="#"> <img src="./img/car1-pre-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a> 
             </div>
 
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption">
                 <h2 class="color-naranja">Ciclo escolar secundaria</h2>
               </div>
-              <img src="./img/car2-secundaria-01.png" class="d-block w-100 img-fluid img-carousel" alt="...">
+              <a href="#"> <img src="./img/car2-secundaria-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a>
             </div>
 
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption">
                 <h2 class="color-naranja">Ciclo escolar primaria</h2>
               </div>
-              <img src="./img/car3-primaria-01.png" class="d-block w-100 img-fluid img-carousel" alt="...">
+              <a href="#"> <img src="./img/car3-primaria-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a>
             </div>
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption">
                 <h2 class="color-naranja">Ciclo secundaria sabatino</h2>
               </div>
-              <img src="./img/car4-sabatino-01.png" class="d-block w-100 img-fluid img-carousel" alt="...">
+              <a href="#"> <img src="./img/car4-sabatino-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a>
             </div>
           </div>
 
