se cambia el color del icon del navbar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <!-- header -->
-  <nav class="navbar navbar-expand-lg mynav fondoHeader">
+  <nav class="navbar navbar-expand-lg mynav fondoHeader navbar-light">
     <div class="container-fluid fondoHeader">
       <div>
         <img class="logo" src="./img/logo.png" alt="">
@@ -98,7 +98,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
               <div class="carousel-caption">
-                <h2 class="txt-carousel-blanco">Ciclo preuniversitario</h2>
+                <h2 class="txt-carousel-blanco">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen como objetivo ingresar en el año 2023</h2>
               </div>
               <a href="#"> <img src="./img/car1-pre-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a> 
             </div>
