--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">CICLOS</a>
+            <a class="nav-link active fondoHeader" aria-current="page" href="#">CICLOS</a>
           </li>
 
           <li class="nav-item">
@@ -98,27 +98,27 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
               <div class="carousel-caption">
-                <h2 class="txt-carousel-blanco">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen como objetivo ingresar en el año 2023</h2>
+                <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria <br>y tienen como objetivo ingresar en el año 2023</h2>
               </div>
               <a href="#"> <img src="./img/car1-pre-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a> 
             </div>
 
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption">
-                <h2 class="color-naranja">Ciclo escolar secundaria</h2>
+                <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen como objetivo ingresar en el año 2023</h2>
               </div>
               <a href="#"> <img src="./img/car2-secundaria-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a>
             </div>
 
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption">
-                <h2 class="color-naranja">Ciclo escolar primaria</h2>
+                <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen como objetivo ingresar en el año 2023</h2>
               </div>
               <a href="#"> <img src="./img/car3-primaria-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a>
             </div>
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption">
-                <h2 class="color-naranja">Ciclo secundaria sabatino</h2>
+                <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen como objetivo ingresar en el año 2023</h2>
               </div>
               <a href="#"> <img src="./img/car4-sabatino-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a>
             </div>
