--- a/index.html
+++ b/index.html
@@ -103,27 +103,27 @@
         <div class="carousel slide carousel-fade" id="vic-carousel" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
-              <div class="carousel-caption">
+              <div class="carousel-caption tamaño-em">
                 <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria <br>y tienen como objetivo ingresar en el año 2023</h2>
               </div>
               <a href="#"> <img src="./img/car1-pre-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a> 
             </div>
 
             <div class="carousel-item" data-bs-interval="3000">
-              <div class="carousel-caption">
+              <div class="carousel-caption tamaño-em">
                 <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen como objetivo ingresar en el año 2023</h2>
               </div>
               <a href="#"> <img src="./img/car2-secundaria-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a>
             </div>
 
             <div class="carousel-item" data-bs-interval="3000">
-              <div class="carousel-caption">
+              <div class="carousel-caption tamaño-em">
                 <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen como objetivo ingresar en el año 2023</h2>
               </div>
               <a href="#"> <img src="./img/car3-primaria-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a>
             </div>
             <div class="carousel-item" data-bs-interval="3000">
-              <div class="carousel-caption">
+              <div class="carousel-caption tamaño-em">
                 <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen como objetivo ingresar en el año 2023</h2>
               </div>
               <a href="#"> <img src="./img/car4-sabatino-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a>
