--- a/index.html
+++ b/index.html
@@ -19,81 +19,112 @@
 
 <body>
   <!-- header -->
-  <div class="d-flex justify-content-center intranet d-inline-flex" >
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
-      <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
-    </svg>
-    <p class="txt-color" >INTRANET DEL ESTUDIANTE</p>
-  </div>
-  <nav class="navbar navbar-expand-lg mynav fondoHeader navbar-light">
-    <div class="container-fluid fondoHeader">
-      <div>
-        <img class="logo" src="./img/logo.png" alt="">
-        
-      </div>
-
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-          <li class="nav-item">
-            <a class="nav-link active fondoHeader" aria-current="page" href="#">CICLOS</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="#">BLOG</a>
-          </li>
-
-
-          <li class="nav-item">
-            <a class="nav-link" href="#">NOSOTROS</a>
-          </li>
-
-
-          <li class="nav-item">
-            <a class="nav-link" href="#">MATRÍCULA</a>
-          </li>
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              EXÁMENES DE ADMISION-ONLINE
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">UNI</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">SAN MARCOS</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">AGRARIA</a></li>
-              <li><a class="dropdown-item" href="#">CALLAO</a></li>
-              <li><a class="dropdown-item" href="#">CANTUTA</a></li>
-              <li><a class="dropdown-item" href="#">VILLAREAL</a></li>
-              <li><a class="dropdown-item" href="#">CATÓLICA</a></li>            
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">SENATI</a></li>
-              <li><hr class="dropdown-divider"></li>
-          
-            </ul>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="#">CLASES DEMOSTRATIVAS</a>
-          </li>         
-
-          <li class="nav-item">
-            <a class="nav-link" href="">CONTÁCTANOS</a>
-          </li>
-
-        </ul>
-
-
-      </div>
+  <div class="row">
+    <!-- Logo ccg -->
+    <div class="col">
+      <img class="logo" src="./img/logo.png" alt="">
     </div>
-  </nav>
 
+    <div class="col">
+      <!-- Intranet -->
+      <div class="d-flex align-items-center intranet d-inline-fle">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door"
+          viewBox="0 0 16 16">
+          <path
+            d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z" />
+        </svg>
+        <p class="txt-color p-2">INTRANET DEL ESTUDIANTE  | </p>
+
+        <!-- icon de whatsapp -->
+        <a href="https://web.whatsapp.com/"
+                class="icono whatsapp d-inline-flex align-items-center justify-content-center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
+                </svg>
+              </a>
+
+
+      </div>
+
+      <!-- Menú -->
+      <nav class="navbar navbar-expand-lg mynav fondoHeader navbar-light">
+        <div class="container-fluid fondoHeader">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+              <li class="nav-item">
+                <a class="nav-link active fondoHeader" aria-current="page" href="#">CICLOS</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="#">BLOG</a>
+              </li>
+
+
+              <li class="nav-item">
+                <a class="nav-link" href="#">NOSOTROS</a>
+              </li>
+
+
+              <li class="nav-item">
+                <a class="nav-link" href="#">MATRÍCULA</a>
+              </li>
+
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  EXÁMENES DE ADMISION-ONLINE
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">UNI</a></li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <li><a class="dropdown-item" href="#">SAN MARCOS</a></li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <li><a class="dropdown-item" href="#">AGRARIA</a></li>
+                  <li><a class="dropdown-item" href="#">CALLAO</a></li>
+                  <li><a class="dropdown-item" href="#">CANTUTA</a></li>
+                  <li><a class="dropdown-item" href="#">VILLAREAL</a></li>
+                  <li><a class="dropdown-item" href="#">CATÓLICA</a></li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <li><a class="dropdown-item" href="#">SENATI</a></li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+
+                </ul>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link d-flex d-inline-flex" href="#">CLASES DEMOSTRATIVAS</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="">CONTÁCTANOS</a>
+              </li>
+
+            </ul>
+
+
+          </div>
+        </div>
+      </nav>
+
+    </div>
+
+  </div>
 
   <!-- Main -->
   <!-- incluyendo el corousel -->
@@ -104,29 +135,36 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria <br>y tienen como objetivo ingresar en el año 2023</h2>
+                <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria <br>y tienen
+                  como objetivo ingresar en el año 2023</h2>
               </div>
-              <a href="#"> <img src="./img/car1-pre-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a> 
+              <a href="#"> <img src="./img/car1-pre-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a>
             </div>
 
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen como objetivo ingresar en el año 2023</h2>
+                <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen
+                  como objetivo ingresar en el año 2023</h2>
               </div>
-              <a href="#"> <img src="./img/car2-secundaria-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a>
+              <a href="#"> <img src="./img/car2-secundaria-01.png" class="d-block w-100 img-fluid img-carousel"
+                  alt="..."></a>
             </div>
 
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen como objetivo ingresar en el año 2023</h2>
+                <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen
+                  como objetivo ingresar en el año 2023</h2>
               </div>
-              <a href="#"> <img src="./img/car3-primaria-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a>
+              <a href="#"> <img src="./img/car3-primaria-01.png" class="d-block w-100 img-fluid img-carousel"
+                  alt="..."></a>
             </div>
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen como objetivo ingresar en el año 2023</h2>
+                <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen
+                  como objetivo ingresar en el año 2023</h2>
               </div>
-              <a href="#"> <img src="./img/car4-sabatino-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a>
+              <a href="#"> <img src="./img/car4-sabatino-01.png" class="d-block w-100 img-fluid img-carousel"
+                  alt="..."></a>
             </div>
           </div>
 
@@ -158,11 +196,11 @@
       </div>
     </div>
   </div>
-  
+
 
   <!-- footer -->
 
- 
+
 
   <!-- Bootstrap JS -->
   <script src="./js/bootstrap.js"></script>
