--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
   <!-- header -->
   <div class="row">
     <!-- Logo ccg -->
-    <div class="col">
+    <div class="col-3">
       <img class="logo" src="./img/logo.png" alt="">
     </div>
 
-    <div class="col">
+    <div class="col-9">
       <!-- Menu superior -->
-      <div class="d-flex align-items-center intranet d-inline-fle">
+      <div class="d-flex align-items-center intranet d-inline-flex">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill color-house" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
           <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
         </svg>
-        <p class="txt-color p-2">INTRANET DEL ESTUDIANTE | </p>
+        <p class="txt-color p-2 mt-3">INTRANET DEL ESTUDIANTE  | </p>
 
         <!-- icon de whatsapp -->
-        <div class="redes-sociales">
+        <div class="redes-sociales ps-0">
           <a href="https://web.whatsapp.com/"
             class="icono whatsapp d-inline-flex align-items-center justify-content-center">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp"
@@ -46,6 +46,7 @@
           </a>
 
         </div>
+        <p class="txt-color p-1 mb-1" >954006703</p>
 
 
 
