tamaño de letra de menu inferior 12px

--- a/index.html
+++ b/index.html
@@ -21,21 +21,24 @@
   <!-- header -->
   <div class="row">
     <!-- Logo ccg -->
-    <div class="col-3">
-      <img class="logo" src="./img/logo.png" alt="">
+    <div class="col-4">
+      <img class="logo mt-3 ms-2" src="./img/logo.png" alt="">
     </div>
 
-    <div class="col-9">
+    <div class="col-8">
       <!-- Menu superior -->
-      <div class="d-flex align-items-center intranet d-inline-flex">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill color-house" viewBox="0 0 16 16">
-          <path fill-rule="evenodd" d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
-          <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
+      <div class="d-flex align-items-center intranet d-inline-flex me-2">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+          class="bi bi-house-fill color-house" viewBox="0 0 16 16">
+          <path fill-rule="evenodd"
+            d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
+          <path fill-rule="evenodd"
+            d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z" />
         </svg>
-        <p class="txt-color p-2 mt-3">INTRANET DEL ESTUDIANTE  | </p>
+        <p class="txt-color mt-3">INTRANET DEL ESTUDIANTE | </p>
 
         <!-- icon de whatsapp -->
-        <div class="redes-sociales ps-0">
+        <div class="redes-sociales">
           <a href="https://web.whatsapp.com/"
             class="icono whatsapp d-inline-flex align-items-center justify-content-center">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp"
@@ -46,14 +49,11 @@
           </a>
 
         </div>
-        <p class="txt-color p-1 mb-1" >954006703</p>
-
-
-
+        <p class="txt-color p-1 mb-1">954006703</p>
       </div>
 
-      <!-- Menú -->
-      <nav class="navbar navbar-expand-lg mynav fondoHeader navbar-light">
+      <!-- Menú inferior -->
+      <nav class="navbar navbar-expand-lg fondoHeader navbar-dark">
         <div class="container-fluid fondoHeader">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -120,8 +120,6 @@
               </li>
 
             </ul>
-
-
           </div>
         </div>
       </nav>
@@ -139,7 +137,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria <br>y tienen
+                <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen
                   como objetivo ingresar en el año 2023</h2>
               </div>
               <a href="#"> <img src="./img/car1-pre-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a>
@@ -147,7 +145,7 @@
 
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen
+                <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen
                   como objetivo ingresar en el año 2023</h2>
               </div>
               <a href="#"> <img src="./img/car2-secundaria-01.png" class="d-block w-100 img-fluid img-carousel"
@@ -156,7 +154,7 @@
 
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen
+                <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen
                   como objetivo ingresar en el año 2023</h2>
               </div>
               <a href="#"> <img src="./img/car3-primaria-01.png" class="d-block w-100 img-fluid img-carousel"
@@ -164,7 +162,7 @@
             </div>
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen
+                <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen
                   como objetivo ingresar en el año 2023</h2>
               </div>
               <a href="#"> <img src="./img/car4-sabatino-01.png" class="d-block w-100 img-fluid img-carousel"
