se avanza en responsive hasta 576px -mobile first

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <!-- header -->
   <div class="row">
     <!-- Logo ccg -->
-    <div class="col-4">
+    <div class="col-4 col-sm-3">
       <img class="logo mt-3 ms-2" src="./img/logo.png" alt="">
     </div>
 
-    <div class="col-8">
+    <div class="col-8 col-sm-9">
       <!-- Menu superior -->
       <div class="d-flex align-items-center intranet d-inline-flex me-2">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -37,7 +37,9 @@
         </svg>
         <p class="txt-color mt-3">INTRANET DEL ESTUDIANTE | </p>
 
-        <!-- icon de whatsapp -->
+        <!-- Agrupando icono wp y número de cel -->
+        <div class="d-flex wp-nro">
+           <!-- icon de whatsapp -->
         <div class="redes-sociales">
           <a href="https://web.whatsapp.com/"
             class="icono whatsapp d-inline-flex align-items-center justify-content-center">
@@ -49,12 +51,16 @@
           </a>
 
         </div>
-        <p class="txt-color p-1 mb-1">954006703</p>
+        <p class="txt-cel p-1 mb-1">954006703</p>
+
+        </div>
+
+       
       </div>
 
       <!-- Menú inferior -->
-      <nav class="navbar navbar-expand-lg fondoHeader navbar-dark">
-        <div class="container-fluid fondoHeader">
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -64,7 +70,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
               <li class="nav-item">
-                <a class="nav-link active fondoHeader" aria-current="page" href="#">CICLOS</a>
+                <a class="nav-link active" aria-current="page" href="#">CICLOS</a>
               </li>
 
               <li class="nav-item">
