se estira la imagen1 de carousel

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen
                   como objetivo ingresar en el año 2023</h2>
               </div>
-              <a href="#"> <img src="./img/car1-pre-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a>
+              <a href="#"> <img src="./img/car1-pre-01.png" class="d-block img-fluid img-carousel" alt="..."></a>
             </div>
 
             <div class="carousel-item" data-bs-interval="3000">
