Se agrega el boton flotante de wp

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="./css/bootstrap.css">
   <!-- Nuestro estilo CSS -->
   <link rel="stylesheet" href="./css/style.css">
+
   <!-- Icono-logo -->
   <link rel="shortcut icon" href="./img/icon2.jpeg">
   <title>Nosotros | Academia Gamarra</title>
@@ -19,15 +20,15 @@
 
 <body>
   <!-- header -->
-  <div class="row">
+  <div class="row barra">
     <!-- Logo ccg -->
-    <div class="col-4 col-sm-3">
+    <div class="col-4 col-sm-2">
       <img class="logo mt-3 ms-2" src="./img/logo.png" alt="">
     </div>
 
-    <div class="col-8 col-sm-9">
+    <div class="col-8 col-sm-10">
       <!-- Menu superior -->
-      <div class="d-flex align-items-center intranet d-inline-flex me-2">
+      <div class="d-flex align-items-center intranet d-inline-flex me-2 casita">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
           class="bi bi-house-fill color-house" viewBox="0 0 16 16">
           <path fill-rule="evenodd"
@@ -35,7 +36,7 @@
           <path fill-rule="evenodd"
             d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z" />
         </svg>
-        <p class="txt-color mt-3">INTRANET DEL ESTUDIANTE | </p>
+        <p class="txt-intranet mt-3">INTRANET DEL ESTUDIANTE | </p>
 
         <!-- Agrupando icono wp y número de cel -->
         <div class="d-flex wp-nro">
@@ -58,8 +59,10 @@
        
       </div>
 
+     
+
       <!-- Menú inferior -->
-      <nav class="navbar navbar-expand-lg navbar-dark">
+      <nav class="navbar navbar-expand-lg mynav navbar-dark">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -70,7 +73,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">CICLOS</a>
+                <a class="nav-link active" aria-current="page" href="./ciclos.html">CICLOS</a>
               </li>
 
               <li class="nav-item">
@@ -90,7 +93,7 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
-                  EXÁMENES DE ADMISION-ONLINE
+                  EXÁMENES-ADMISION-ONLINE
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="#">UNI</a></li>
@@ -206,6 +209,13 @@
   </div>
 
 
+  <!-- Icon Whatsapp -->
+  <div class="container-btn-wp">
+    <a href="https://wa.me/954006703?text=Escríbenos%20tus%20consultas%20sobre%20nuestros%20ciclos" class="btn-wsp" target="_blank">
+      <img class="icon-wp" src="./img/icon-wp.png" alt="">     
+    </a>
+  </div>
+  
   <!-- footer -->
 
 
