Se cambia el color blanco del navbar a un color ccg

--- a/index.html
+++ b/index.html
@@ -20,85 +20,84 @@
 
 <body>
   <!-- header -->
-      <!-- Menú inferior -->
-      <nav class="navbar navbar-expand-lg mynav navbar-dark">
-        <div class="container-fluid">
-          <div>
-            <img class="logo mt-3 ms-2" src="./img/logo.png" alt="">
-            
-          </div>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+  <!-- Menú inferior -->
+  <nav class="navbar navbar-expand-lg mynav navbar-dark">
+    <div class="container-fluid">
+      <div>
+        <img class="logo mt-3 ms-2" src="./img/logo.png" alt="">
 
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./ciclos.html">CICLOS</a>
+      </div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">CICLOS</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="./ciclos.html">BLOG</a>
+          </li>
+
+
+          <li class="nav-item">
+            <a class="nav-link" href="./ciclos.html">NOSOTROS</a>
+          </li>
+
+
+          <li class="nav-item">
+            <a class="nav-link" href="./ciclos.html">MATRÍCULA</a>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="./ciclos.html" id="navbarDropdown" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              EXÁMENES-ADMISION-ONLINE
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">UNI</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">SAN MARCOS</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">AGRARIA</a></li>
+              <li><a class="dropdown-item" href="#">CALLAO</a></li>
+              <li><a class="dropdown-item" href="#">CANTUTA</a></li>
+              <li><a class="dropdown-item" href="#">VILLAREAL</a></li>
+              <li><a class="dropdown-item" href="#">CATÓLICA</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">SENATI</a></li>
+              <li>
+                <hr class="dropdown-divider">
               </li>
 
-              <li class="nav-item">
-                <a class="nav-link" href="#">BLOG</a>
-              </li>
-
-
-              <li class="nav-item">
-                <a class="nav-link" href="#">NOSOTROS</a>
-              </li>
-
-
-              <li class="nav-item">
-                <a class="nav-link" href="#">MATRÍCULA</a>
-              </li>
-
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  EXÁMENES-ADMISION-ONLINE
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">UNI</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="#">SAN MARCOS</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="#">AGRARIA</a></li>
-                  <li><a class="dropdown-item" href="#">CALLAO</a></li>
-                  <li><a class="dropdown-item" href="#">CANTUTA</a></li>
-                  <li><a class="dropdown-item" href="#">VILLAREAL</a></li>
-                  <li><a class="dropdown-item" href="#">CATÓLICA</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="#">SENATI</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-
-                </ul>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link d-flex d-inline-flex" href="#">CLASES DEMOSTRATIVAS</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="">INTRANET</a>
-              </li>
-              
-              <li class="nav-item">
-                <a class="nav-link" href="">CONTÁCTANOS</a>
-              </li>
             </ul>
-          </div>
-        </div>
-      </nav>
- 
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link d-flex d-inline-flex" href="#">CLASES DEMOSTRATIVAS</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="./ciclos.html">INTRANET</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="./ciclos.html">CONTÁCTANOS</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
   <!-- Main -->
   <!-- incluyendo el corousel -->
   <div class="">
@@ -108,7 +107,8 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen
+                <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y
+                  tienen
                   como objetivo ingresar en el año 2023</h2>
               </div>
               <a href="#"> <img src="./img/car1-pre-01.png" class="d-block w-100 img-carousel" alt="..."></a>
@@ -116,16 +116,17 @@
 
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen
+                <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y
+                  tienen
                   como objetivo ingresar en el año 2023</h2>
               </div>
-              <a href="#"> <img src="./img/car2-secundaria-01.png" class="d-block w-100 img-carousel"
-                  alt="..."></a>
+              <a href="#"> <img src="./img/car2-secundaria-01.png" class="d-block w-100 img-carousel" alt="..."></a>
             </div>
 
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen
+                <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y
+                  tienen
                   como objetivo ingresar en el año 2023</h2>
               </div>
               <a href="#"> <img src="./img/car3-primaria-01.png" class="d-block w-100 img-fluid img-carousel"
@@ -133,7 +134,8 @@
             </div>
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen
+                <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y
+                  tienen
                   como objetivo ingresar en el año 2023</h2>
               </div>
               <a href="#"> <img src="./img/car4-sabatino-01.png" class="d-block w-100 img-fluid img-carousel"
@@ -173,11 +175,12 @@
 
   <!-- Icon Whatsapp -->
   <div class="container-btn-wp">
-    <a href="https://wa.me/954006703?text=Escríbenos%20tus%20consultas%20sobre%20nuestros%20ciclos" class="btn-wsp" target="_blank">
-      <img class="icon-wp" src="./img/icon-wp.png" alt="">     
+    <a href="https://wa.me/+511954006703?text=Escríbenos%20tus%20consultas%20sobre%20nuestros%20ciclos" class="btn-wsp"
+      target="_blank">
+      <img class="icon-wp" src="./img/icon-wp.png" alt="">
     </a>
   </div>
-  
+
   <!-- footer -->
 
 
