Se modifica el limite de cambio de l menu horizotal al boton

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <!-- header -->
   <!-- Menú inferior -->
-  <nav class="navbar navbar-expand-lg mynav navbar-dark">
+  <nav class="navbar navbar-expand-md mynav navbar-dark">
     <div class="container-fluid">
       <div>
         <img class="logo mt-3 ms-2" src="./img/logo.png" alt="">
@@ -53,9 +53,9 @@
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="./ciclos.html" id="navbarDropdown" role="button"
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
               data-bs-toggle="dropdown" aria-expanded="false">
-              EXÁMENES-ADMISION-ONLINE
+              EXÁMENES<br>ADMISION<br>ONLINE
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="#">UNI</a></li>
@@ -83,7 +83,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link d-flex d-inline-flex" href="#">CLASES DEMOSTRATIVAS</a>
+            <a class="nav-link d-flex d-inline-flex" href="#">CLASES <br> DEMOSTRATIVAS</a>
           </li>
 
           <li class="nav-item">
@@ -91,7 +91,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="./ciclos.html">CONTÁCTANOS</a>
+            <a class="nav-link" href="./ciclos.html">CONTACTO</a>
           </li>
         </ul>
       </div>
