se mejora el tamaño de la imagen del carousel en tamaño tablet

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <nav class="navbar navbar-expand-md mynav navbar-dark">
     <div class="container-fluid">
       <div>
-        <img class="logo mt-3 ms-2" src="./img/logo.png" alt="">
+        <img class="logo" src="./img/logo.png" alt="">
 
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
