se mejora el tamaño y fondo del texto del carousel

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-              data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
               EXÁMENES<br>ADMISION<br>ONLINE
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -107,36 +107,28 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y
-                  tienen
-                  como objetivo ingresar en el año 2023</h2>
+                <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen como objetivo ingresar en el año 2023</h2>
               </div>
               <a href="#"> <img src="./img/car1-pre-01.png" class="d-block w-100 img-carousel" alt="..."></a>
             </div>
 
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y
-                  tienen
-                  como objetivo ingresar en el año 2023</h2>
+                <h2 class="txt-carousel col-12">Dirigido a estudiantes de secundaria que desean iniciar su preparación Preuniversitaria para en un futuro ingresar a la universidad</h2>
               </div>
               <a href="#"> <img src="./img/car2-secundaria-01.png" class="d-block w-100 img-carousel" alt="..."></a>
             </div>
 
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y
-                  tienen
-                  como objetivo ingresar en el año 2023</h2>
+                <h2 class="txt-carousel-3 col-12">Dirigido a estudiantes de primaria para que refuercen las bases de las matemáticas y tengan un desempeño escolar exitoso</h2>
               </div>
               <a href="#"> <img src="./img/car3-primaria-01.png" class="d-block w-100 img-fluid img-carousel"
                   alt="..."></a>
             </div>
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y
-                  tienen
-                  como objetivo ingresar en el año 2023</h2>
+                <h2 class="txt-carousel-4 col-12">Dirigido a estudiantes de secundaria que desean prepararse para que en un futuro ingresen a la universidad, estudiando los sábados</h2>
               </div>
               <a href="#"> <img src="./img/car4-sabatino-01.png" class="d-block w-100 img-fluid img-carousel"
                   alt="..."></a>
