se agrega box shadow al texto del carousel

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
   <!-- Icon Whatsapp -->
   <div class="container-btn-wp">
-    <a href="https://wa.me/+511954006703?text=Escríbenos%20tus%20consultas%20sobre%20nuestros%20ciclos" class="btn-wsp"
+    <a href="https://wa.me/51954006703?text=Escríbenos%20tus%20consultas%20sobre%20nuestros%20ciclos" class="btn-wsp"
       target="_blank">
       <img class="icon-wp" src="./img/icon-wp.png" alt="">
     </a>
