--- a/index.html
+++ b/index.html
@@ -107,28 +107,28 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen como objetivo ingresar en el año 2023</h2>
+                <h2 class="txt-carousel-1 col-12">Dirigido a estudiantes que inician su preparación Preuniversitaria y tienen como objetivo ingresar en el año 2023</h2>
               </div>
               <a href="#"> <img src="./img/car1-pre-01.png" class="d-block w-100 img-carousel" alt="..."></a>
             </div>
 
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel col-12">Dirigido a estudiantes de secundaria que desean iniciar su preparación Preuniversitaria para en un futuro ingresar a la universidad</h2>
+                <h2 class="txt-carousel-2 col-12">Dirigido a escolares de secundaria que desean iniciar su preparación Preuniversitaria para en un futuro ingresar a la universidad</h2>
               </div>
               <a href="#"> <img src="./img/car2-secundaria-01.png" class="d-block w-100 img-carousel" alt="..."></a>
             </div>
 
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel-3 col-12">Dirigido a estudiantes de primaria para que refuercen las bases de las matemáticas y tengan un desempeño escolar exitoso</h2>
+                <h2 class="txt-carousel-3 col-12">Dirigido a escolares de primaria para que refuercen las bases de las matemáticas y tengan un desempeño escolar exitoso</h2>
               </div>
               <a href="#"> <img src="./img/car3-primaria-01.png" class="d-block w-100 img-fluid img-carousel"
                   alt="..."></a>
             </div>
             <div class="carousel-item" data-bs-interval="3000">
               <div class="carousel-caption tamaño-em">
-                <h2 class="txt-carousel-4 col-12">Dirigido a estudiantes de secundaria que desean prepararse para que en un futuro ingresen a la universidad, estudiando los sábados</h2>
+                <h2 class="txt-carousel-4 col-12">Dirigido a escolares de secundaria que desean prepararse para que en un futuro ingresen a la universidad, estudiando los sábados</h2>
               </div>
               <a href="#"> <img src="./img/car4-sabatino-01.png" class="d-block w-100 img-fluid img-carousel"
                   alt="..."></a>
