se mejora la vista 1440

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <!-- header -->
-  <!-- Menú inferior -->
+  <!-- Menú-->
   <nav class="navbar navbar-expand-md mynav navbar-dark">
     <div class="container-fluid">
       <div>
