Se bajó el texto debajo del carousel

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           </button>
 
           <!-- indicators -->
-          <div class="carousel-indicators">
+          <div class="carousel-indicators btn-rayita">
             <button type="button" class="active" data-bs-target="#vic-carousel" data-bs-slide-to="0"
               aria-label="Slide 1"></button>
             <button type="button" class="" data-bs-target="#vic-carousel" data-bs-slide-to="1"
