se mejora la ubicación de los controles

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
               <div class="carousel-caption tamaño-em">
               </div>
               <a href="#"> <img src="./img/car1-pre-01.png" class="d-block w-100 img-carousel" alt="..."></a>
-              <h2 class="txt-carousel-1 text-center">Dirigido a estudiantes que inician su preparación
-                Preuniversitaria y tienen como objetivo ingresar en el año 2023</h2>
+              <h2 class="txt-carousel-1 text-center">Para estudiantes que necesitan preparación
+                Preuniversitaria y así puedan ingresar a la universidad</h2>
             </div>
 
             <div class="carousel-item" data-bs-interval="3000">
@@ -118,8 +118,8 @@
 
               </div>
               <a href="#"> <img src="./img/car2-secundaria-01.png" class="d-block w-100 img-carousel" alt="..."></a>
-              <h2 class="txt-carousel-2 text-center">Dirigido a escolares de secundaria que desean iniciar su
-                preparación Preuniversitaria para en un futuro ingresar a la universidad</h2>
+              <h2 class="txt-carousel-2 text-center">Para escolares de secundaria que desean iniciar su
+                preparación Preuniversitaria rumbo a la universidad</h2>
             </div>
 
             <div class="carousel-item" data-bs-interval="3000">
@@ -127,7 +127,7 @@
 
               </div>
               <a href="#"> <img src="./img/car3-primaria-01.png" class="d-block w-100 img-fluid img-carousel" alt="..."></a>
-              <h2 class="txt-carousel-3 text-center">Dirigido a escolares de primaria para que refuercen las
+              <h2 class="txt-carousel-3 text-center">Para escolares de primaria para que refuercen las
                 bases de las matemáticas y tengan un desempeño escolar exitoso</h2>
             </div>
             <div class="carousel-item" data-bs-interval="3000">
@@ -136,8 +136,8 @@
               </div>
               <a href="#"> <img src="./img/car4-sabatino-01.png" class="d-block w-100 img-fluid img-carousel"
                   alt="..."></a>
-              <h2 class="txt-carousel-4 text-center">Dirigido a escolares de secundaria que desean prepararse
-                para que en un futuro ingresen a la universidad, estudiando los sábados</h2>
+              <h2 class="txt-carousel-4 text-center">Para escolares de secundaria que desean prepararse los sábados
+                para que en un futuro ingresen a la universidad</h2>
             </div>
           </div>
 
