--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="./ciclos.html">INTRANET</a>
+            <a class="nav-link" href="https://academiagamarra.com/ead/">INTRANET</a>
           </li>
 
           <li class="nav-item">
